--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;}
+main{
+    align-items: center;
+}
 
 nav ul{
     display: flex;
@@ -37,33 +40,32 @@ section#hero {
     display: flex;
     flex-direction: center;
     justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
- h1 { font-size: 3rem;
+ h1 { 
+    font-size: 3rem;
 text-transform: uppercase;
-text-align: center;}
+text-align: center;
+}
 
- h2 {
-    display: flex;
+ h2 {    
     font-size: 2rem;
     text-align: center;
 }
 
 .project-detail{
-
     border: 4px solid lightgrey;
+    margin: auto;
     width: 300px;
-border-radius: 5px;
-align-items: center;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .project-detail img{
-    width: 100%;
-    display: flex;
-    flex: center;
+    width: 100%;    
     border-radius: 5px;
-    align-items: center;
+    text-align: center;
     }
     .project-list{
         display: inline-block;
@@ -73,7 +75,10 @@ align-items: center;
         margin: 0 auto;
     }
 
-    
+   .lista-de-proyectos{
+    text-align: center;
+    width: 100%;
+   } 
 /*
 section {
     border: 2px solid lightgrey;
